--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
                         <img src="Images/logo.jpg" alt="logo" />
                     </div>
                     <div>
-                        <img src="Images/jlo.tif" alt="jlo Drawing" />
+                        <img src="Images/jlo.png" alt="jlo Drawing" />
                     </div>
                     <div>
-                        <img src="Images/tiger_coffee.TIF" alt="java jungle coffee" />
+                        <img src="Images/tiger_coffee.png" alt="java jungle coffee" />
                     </div>
                     <div>
-                        <img src="Images/nissan370z.jpeg" alt="nissan 370z poster" />
+                        <img src="Images/nissan370z.png
+                        " alt="nissan 370z poster" />
                     </div>
                 </div>
 
